--- a/cloud_functions/package.json
+++ b/cloud_functions/package.json
@@ -11,5 +11,9 @@
   "dependencies": {
     "firebase-admin": "^5.12.1",
     "firebase-functions": "^1.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.1.0",
+    "eslint-plugin-promise": "^3.8.0"
   }
 }
